// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Example advanced-custom-functions/App.svelte > should render 1`] = `
<div>
  <div>
    <!---->
    <!---->
    <span>
      <!---->
      <!---->
      <!---->
      Weekday ⁨2⁩ is ⁨Tuesday⁩
      
      
      
      
    </span>
    
    
    <!---->
  </div>
   
  <div>
    <!---->
    <!---->
    <span>
      <!---->
      <!---->
      <!---->
      Weekday of ⁨2/6/2024⁩ is ⁨Tuesday⁩
      
      
      
      
    </span>
    
    
    <!---->
  </div>
  
</div>
`;

exports[`Example advanced-insert-component-complex/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <p>
      <!---->
      <!---->
      <span>
        <!---->
        <!---->
        <!---->
        This text has a 
        
        <!---->
        <!---->
        <!---->
        <fluent-component
          data-element="outline"
        >
          <!---->
          <span
            style="padding: 2px 4px; border-width: 2px; border-style: solid; border-color: grey;"
          >
            <!---->
            <!---->
            default outline
            
            
            <!---->
          </span>
          
          
        </fluent-component>
        
        
        
        <!---->
        .
        
        
        
        
      </span>
      
      
      <!---->
    </p>
     
    <p>
      <!---->
      <!---->
      <span>
        <!---->
        <!---->
        <!---->
        This text has a 
        
        <!---->
        <!---->
        <!---->
        <fluent-component
          data-element="outline"
        >
          <!---->
          <span
            style="padding: 2px 4px; border-width: 2px; border-style: solid; border-color: blue;"
          >
            <!---->
            <!---->
            blue outline
            
            
            <!---->
          </span>
          
          
        </fluent-component>
        
        
        
        <!---->
        .
        
        
        
        
      </span>
      
      
      <!---->
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Example advanced-insert-component-simple/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <!---->
    <!---->
    <button>
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <fluent-component
        data-element="google-icon"
      >
        <!---->
        <svg
          height="1.2em"
          viewBox="0 0 256 262"
          width="1.18em"
        >
          <path
            d="M255.878 133.451c0-10.734-.871-18.567-2.756-26.69H130.55v48.448h71.947c-1.45 12.04-9.283 30.172-26.69 42.356l-.244 1.622l38.755 30.023l2.685.268c24.659-22.774 38.875-56.282 38.875-96.027"
            fill="#4285F4"
          />
          <path
            d="M130.55 261.1c35.248 0 64.839-11.605 86.453-31.622l-41.196-31.913c-11.024 7.688-25.82 13.055-45.257 13.055c-34.523 0-63.824-22.773-74.269-54.25l-1.531.13l-40.298 31.187l-.527 1.465C35.393 231.798 79.49 261.1 130.55 261.1"
            fill="#34A853"
          />
          <path
            d="M56.281 156.37c-2.756-8.123-4.351-16.827-4.351-25.82c0-8.994 1.595-17.697 4.206-25.82l-.073-1.73L15.26 71.312l-1.335.635C5.077 89.644 0 109.517 0 130.55s5.077 40.905 13.925 58.602z"
            fill="#FBBC05"
          />
          <path
            d="M130.55 50.479c24.514 0 41.05 10.589 50.479 19.438l36.844-35.974C195.245 12.91 165.798 0 130.55 0C79.49 0 35.393 29.301 13.925 71.947l42.211 32.783c10.59-31.477 39.891-54.251 74.414-54.251"
            fill="#EB4335"
          />
        </svg>
        
        
      </fluent-component>
      
      
      
      <!---->
       Login with Google
      
      
      
      
    </button>
    
    
    <!---->
  </div>
  
</div>
`;

exports[`Example advanced-insert-element/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <p>
      <!---->
      <!---->
      <span>
        <!---->
        <!---->
        <!---->
        Please accept the 
        
        <!---->
        <!---->
        <!---->
        <a
          href="/terms"
          rel="noopener noreferrer"
          target="_blank"
        >
          <!---->
          <!---->
          <!---->
          Terms of Service
          
          
          
          
        </a>
        
        
        
        <!---->
         to continue.
        
        
        
        
      </span>
      
      
      <!---->
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Example advanced-insert-element-attributes/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <p>
      <!---->
      <!---->
      <span>
        <!---->
        <!---->
        <!---->
        Click the 
        
        <!---->
        <!---->
        <!---->
        <a
          href="https://example.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          <!---->
          <!---->
          <!---->
          link
          
          
          
          
        </a>
        
        
        
        <!---->
         to learn more.
        
        
        
        
      </span>
      
      
      <!---->
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Example advanced-interpolation-formatting/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div>
      <!---->
      <!---->
      <span>
        <!---->
        <!---->
        <!---->
        Your DPI ratio is ⁨1.778⁩
        
        
        
        
      </span>
      
      
      <!---->
    </div>
     
    <div>
      <!---->
      <!---->
      <span>
        <!---->
        <!---->
        <!---->
        Your account balance is ⁨$1,234.56⁩
        
        
        
        
      </span>
      
      
      <!---->
    </div>
     
    <div>
      <!---->
      <!---->
      <span>
        <!---->
        <!---->
        <!---->
        Today is ⁨September 13, 2022⁩
        
        
        
        
      </span>
      
      
      <!---->
    </div>
    <!---->
  </div>
  
</div>
`;

exports[`Example advanced-override-children/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <p>
      <!---->
      <!---->
      <input
        aria-label="Type to search something"
        placeholder="Search"
        type="search"
      />
      
      
      <!---->
    </p>
     
    <p>
      <!---->
      <!---->
      <a
        href="/privacy"
        rel="external"
        target="_blank"
      >
        <!---->
        <!---->
        Read our privacy policy.
        
        
        <!---->
      </a>
      
      
      <!---->
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Example frontpage/App.svelte > should render 1`] = `
<div>
  <strong>
    <!---->
    <!---->
    <span>
      <!---->
      <!---->
      <!---->
      Hello, ⁨Anna⁩!
      
      
      
      
    </span>
    
    
    <!---->
  </strong>
   
  <p>
    <!---->
    <!---->
    <span>
      <!---->
      <!---->
      <!---->
      ⁨Anna⁩ ⁨added ⁨3⁩ new photos⁩ to ⁨her stream⁩.
      
      
      
      
    </span>
    
    
    <!---->
  </p>
  
</div>
`;

exports[`Example generic-svelte-first-steps/App.svelte > should render 1`] = `
<div>
  <!---->
  <!---->
  <span>
    <!---->
    <!---->
    <!---->
    Hello, world!
    
    
    
    
  </span>
  
  
  
</div>
`;

exports[`Example generic-svelte-multi-language/App.svelte > should render 1`] = `
<div>
  <!---->
  <!---->
  <span>
    <!---->
    <!---->
    <!---->
    Hello, world!
    
    
    
    
  </span>
  
  
  
</div>
`;

exports[`Example generic-svelte-translation-files/App.svelte > should render 1`] = `
<div>
  <!---->
  <!---->
  <span>
    <!---->
    <!---->
    <!---->
    Hello, world!
    
    
    
    
  </span>
  
  
  
</div>
`;

exports[`Example localize-attributes/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <button>
      Show prompt
    </button>
    <!---->
  </div>
  
</div>
`;

exports[`Example localize-dynamic-text/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <button>
      Say hello
    </button>
    <!---->
  </div>
  
</div>
`;

exports[`Example localize-static-text/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <button>
      Say hello
    </button>
    <!---->
  </div>
  
</div>
`;

exports[`Example localized-dynamic-text/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <!---->
    <!---->
    <span>
      <!---->
      <!---->
      <!---->
      You have ⁨10⁩ unread emails.
      
      
      
      
    </span>
    
    
    <!---->
  </div>
  
</div>
`;

exports[`Example localized-static-text/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <!---->
    <!---->
    <span>
      <!---->
      <!---->
      <!---->
      Hello, world!
      
      
      
      
    </span>
    
    
    <!---->
  </div>
  
</div>
`;

exports[`Example tutorial-attributes-simple/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <!---->
    <!---->
    <strong
      title="This is an important notice"
    >
      <!---->
      <!---->
      <!---->
      Important Notice
      
      
      
      
    </strong>
    
    
    <!---->
  </div>
  
</div>
`;

exports[`Example tutorial-basic-message/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <!---->
    <!---->
    <span>
      <!---->
      <!---->
      <!---->
      Hello, world!
      
      
      
      
    </span>
    
    
    <!---->
  </div>
  
</div>
`;

exports[`Example tutorial-change-wrapper/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <p>
      <!---->
      <!---->
      <strong>
        <!---->
        <!---->
        <!---->
        This is an important notice.
        
        
        
        
      </strong>
      
      
      <!---->
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Example tutorial-inline-formatting/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <p>
      <!---->
      <!---->
      <span>
        <!---->
        <!---->
        <!---->
        This message contains 
        
        <!---->
        <!---->
        <!---->
        <strong>
          <!---->
          <!---->
          <!---->
          strong
          
          
          
          
        </strong>
        
        
        
        <!---->
         and 
        
        <!---->
        <!---->
        <!---->
        <em>
          <!---->
          <!---->
          <!---->
          emphasized
          
          
          
          
        </em>
        
        
        
        <!---->
         text.
        
        
        
        
      </span>
      
      
      <!---->
    </p>
    <!---->
  </div>
  
</div>
`;

exports[`Example tutorial-interpolation/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <!---->
    <!---->
    <span>
      <!---->
      <!---->
      <!---->
      Hello, ⁨everyone⁩!
      
      
      
      
    </span>
    
    
    <!---->
  </div>
  
</div>
`;

exports[`Example tutorial-localize-derived/App.svelte > should render 1`] = `
<div>
  <p>
    Message with 
    <code>
      $derived
    </code>
    : 
    <strong>
      This is the english message!
    </strong>
  </p>
   
  <p>
    Message without 
    <code>
      $derived
    </code>
    : 
    <strong>
      This is the english message!
    </strong>
  </p>
  
</div>
`;

exports[`Example tutorial-localize-script/App.svelte > should render 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <button>
      Add to Cart
    </button>
     
    <div
      class="toast-container svelte-xtg016"
    >
      
    </div>
    <!---->
    <!---->
  </div>
  
</div>
`;
